# soroscope

./: Cargo.toml  check_braces.py  package-lock.json
contracts/emergency_guard/examples/: simple_token.rs
contracts/emergency_guard/src/: lib.rs  test.rs
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs  test.rs
contracts/liquidity_pool/: Cargo.toml
contracts/liquidity_pool/src/: lib.rs
contracts/proxy/src/: proxy.rs  test.rs
contracts/token/: Cargo.toml
core/: Cargo.toml
core/src/: jobs.rs  lib.rs  main.rs  rpc_provider.rs  simulation.rs
web/pages/: index.tsx
