[package]
name = "soroban-token-contract"
description = "Soroban Token Contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.0"
emergency_guard = { path = "../emergency_guard" }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
